Whitespace fix

--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@ body {
     margin:0px;
     width: 100%;
     overflow: auto;
+    padding-bottom: 20px;
 }
 
 h4 {
@@ -298,6 +299,7 @@ h6 {
 	background-color: #2a4d69;
 	color: #FFF;
 	text-align: center;
+	padding: 0;
 }
 
 #social_links2 {
